处理了完毕

--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -95,8 +95,14 @@
             </volist>
             </tbody>
         </table>
+        <p class="total">共：<span>{$total_num}</span> 位宾客</p>
     </div>
 </div>
+
+<div class="foot_fix_top" >
+    <img src="__IMG__/scroll-to-top.png" width="37" height="37">
+</div>
+
 
 <div class="modal fade" id="addUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
