--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -83,8 +83,8 @@
             <tbody>
             <volist name="info" id="row">
                 <tr class="one_row">
-                    <td>{$row['name']}</td>
-                    <td>{$row['mobile']}</td>
+                    <td class="name_sty">{$row['name']}</td>
+                    <td class="mobile_sty">{$row['mobile']}</td>
                     <td>{$tongxue_type[$row['type']]}</td>
                     <td class="comming" data-status="{$row['cancomming']}">{$can_comming[$row['cancomming']]}</td>
                     <td>
