--- a/App/Home/View/Kevin/index.html
+++ b/App/Home/View/Kevin/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="__CSS__/bootstrap.min.css">
-    <link rel="stylesheet" href="__CSS__/style.css">
+    <link rel="stylesheet" href="__CSS__/{$css}">
     <script src="__JS__/jquery-1.10.2.min.js"></script>
     <script src="__JS__/bootstrap.min.js"></script>
 
