--- a/Public/Home/css/style1.css
+++ b/Public/Home/css/style1.css
@@ -4,6 +4,7 @@
 }
 a{color: #0f0f0f}
 a:visited{color: #0f0f0f}
+.user_list a{color: #33CCFF}
 .main_box{
     height: 100%;
     background: white;
@@ -109,7 +110,9 @@ select option{
     font-size:16px;
     font-weight:bolder;
 }
-
+table td{
+    text-align: center;
+}
 .mobile_sty a{
     color: #5BC0DE;
 }
