--- a/Public/Home/css/style.css
+++ b/Public/Home/css/style.css
@@ -132,7 +132,15 @@ table td{
 table tbody{
     font-size: 10px;
 }
-
+.hongbao{
+    border: 1px solid #ccc;
+    text-align: center;
+    width: 50px;
+    padding: 5px;
+    border-radius: 6px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
 #poptip {
     position: absolute;
     width:100%;
